Implement backend optionality and example loading feature; update deployment workflow to include new environment variables for VITE_WITHOUT_BACKEND and VITE_EXAMPLE, modify App.vue to conditionally check backend availability, and enhance FileUpload.vue with example loading functionality.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
       - name: Build project
         env:
           VITE_BASE_PATH: /Specula/
+          VITE_WITHOUT_BACKEND: 'true'
+          VITE_EXAMPLE: 'true'
         run: npm run build
 
       - name: Deploy to example branch
