Enhance standalone mode support; update Vite configuration to disable backend checks, modify example OpenAPI URLs for consistency, and implement conditional navigation in Index.vue to prevent redirects in standalone mode. Improve documentation to reflect these changes.

--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -103,7 +103,7 @@ jobs:
               <script>
                   Specula.init({
                       container: '#specula-container',
-                      openapi: 'https://api.example.com/openapi.json'
+                      openapi: 'https://petstore3.swagger.io/api/v3/openapi.json'
                   });
               </script>
           </body>
